test/importers/invalid/duplicate_columns_importer.rb
class DuplicateColumnsImporter < CSVParty::Importer
  column :product, header: 'Product'
  column :product, header: 'Product'
end
